# CircuitPython_sensirion_i2c_driver

./: .buildinfo  README.md  README.rst  api.html  device_driver_guidelines.html  error_handling.html  genindex.html  index.html  installation.html  logging_debugging.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py  single_multi_channel.html  transceivers.html
.github/workflows/: docs.yml
_modules/: index.html
_modules/circuitpython_sensirion_i2c_driver/: command.html  connection.html  crc_calculator.html  device.html  errors.html  linux_i2c_transceiver.html  sensirion_command.html  transceiver_v1.html
_sources/: api.rst.txt  device_driver_guidelines.rst.txt  error_handling.rst.txt  index.rst.txt  quickstart.rst.txt  transceivers.rst.txt
docs/: conf.py  index.rst  installation.rst  logging_debugging.rst  quickstart.rst  requirements.txt  single_multi_channel.rst  transceivers.rst
sensirion_i2c_driver/: __init__.py  adafruit_bus_device_i2c_transceiver.py  circuitpython_i2c_transceiver.py  connection.py  errors.py  transceiver_v1.py
tests/: test_command.py  test_connection.py  test_crc_calculator.py  test_device.py  test_errors.py  test_linux_i2c_transceiver.py  test_sensirion_command.py
